# components_compC

./: .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .pylintrc  .pylintrc copy  Dockerfile  LICENSE.md  README.md  ct.yaml  renovate.json  requirements.txt  setup.cfg  tox.ini
.github/workflows/: components_compC.yaml  integration.yaml  service.yaml
charts/comp-c/: Chart.yaml  values.yaml
charts/comp-c/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
datavisualizer/: core.py
datavisualizer/config/: config.py
datavisualizer/logger/: log.conf  log.py
datavisualizer/storage/: abstract_storage.py  dummy.py  mysql.py  storage_factory.py
datavisualizer/templates/: index.html
tests/utest/config/: test_config.py
