[metadata]
name = comp-a
version = 0.1.0
description = Data visualizer
license = SISL 1.4
license_file = LICENSE.md

[options]
python_requires = >=3.9
packages_dir =
    = datavisualizer
packages = find_namespace:
include_package_data = True
install_requires =
    paho-mqtt

[options.package_data]
dataprovider = logger/*.conf

[options.extras_require]
linting =
    pylint>=2.15
    pylint-gitlab>=1.2
testing =
    pytest>=7.2
    coverage>=6.5
    ddt>=1.6
